--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navigation Expert</title>
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-
-  <aside>
-    <ul>
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-    </ul>
-  </aside>
-
-  <main>
-    <h1>Welcome to the Navigation Expert Lab</h1>
-    <p>Scroll down to test fixed sidebar behavior.</p>
-    <p style="margin-top: 1000px;">End of the page.</p>
-  </main>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>My Centered Navigation</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/css_comparison.css">
+    <link rel="icon" href="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico">
+  </head>
+  <body>
+      <header>  
+        <nav id="main-navbar">
+            <div id="navbar-container">
+              <ul>
+                <li id="onpage"><a href="#">Page 1</a></li>
+                <li><a href="page2.html">Page 2</a></li>
+                <li><a href="page3.html">Page 3</a></li>
+              </ul>
+            </div>
+        </nav>
+      </header>
+      <div id="sidebar">
+        <div id="sidebar-container">
+          <ul>
+            <li><a href="https://www.linkedin.com/">Linkedin</a></li>
+            <li><a href="https://www.google.com/">Google</a></li>
+            <li><a href="https://basecamp.com/">Basecamp</a></li>
+          </ul>
+        </div>
+      </div>
+  </body>
 </html>
