--- a/page2.html
+++ b/page2.html
@@ -1,38 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>My Centered Navigation - Page 2</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico">
-</head>
-<body>
-  <header>
-    <nav id="main-navbar">
-      <div id="navbar-container">
-        <ul>
-          <li><a href="index.html">Page 1</a></li>
-          <li id="onpage"><a href="#">Page 2</a></li>
-          <li><a href="page3.html">Page 3</a></li>
-        </ul>
+  <head>
+    <meta charset="utf-8">
+    <title>My Centered Navigation</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/css_comparison.css">
+    <link rel="icon" href="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico">
+  </head>
+  <body>
+      <header>  
+        <nav id="main-navbar">
+            <div id="navbar-container">
+              <ul>
+                <li><a href="index.html">Page 1</a></li>
+                <li id="onpage"><a href="#">Page 2</a></li>
+                <li><a href="page3.html">Page 3</a></li>
+              </ul>
+            </div>
+        </nav>
+      </header>
+      <div id="sidebar">
+        <div id="sidebar-container">
+          <ul>
+            <li><a href="https://www.linkedin.com/">Linkedin</a></li>
+            <li><a href="https://www.google.com/">Google</a></li>
+            <li><a href="https://basecamp.com/">Basecamp</a></li>
+          </ul>
+        </div>
       </div>
-    </nav>
-  </header>
-
-  <div id="sidebar">
-    <div id="sidebar-container">
-      <ul>
-        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-        <li><a href="https://www.google.com/">Google</a></li>
-        <li><a href="https://basecamp.com/">Basecamp</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <main>
-    <h1>Welcome to Page 2</h1>
-    <p>This is the second page in your navigation lab.</p>
-  </main>
-</body>
+  </body>
 </html>
